--- a/app/views/welcome/faq.html.erb
+++ b/app/views/welcome/faq.html.erb
@@ -59,7 +59,7 @@
       <p class="lead"><b>Q</b>- For how long the product/service(s) will be published on the website?</p>
       <p><b>Ans</b>- The product/service(s) will be available on the website till the end date of the availability defined by owner/vendor at the time of uploading the product/service(s). However, owner/vendor can modify the end date any time after publishing.</p>
       <p class="lead"><b>Q</b>- How would I know if someone has enquired about my product/service(s)?</p>
-      <p><b>Ans</b>- If any user enquired about any product/service(s) for rent, the owner/vendor of that particular product/service will get an email notification on the registered email ID with <a href="http://www.mysolutions4u.in" target="_blank">Rent Agreement</a> attached with it and also a SMS alert on the registered mobile number.</p>
+      <p><b>Ans</b>- If any user enquired about any product/service(s) for rent, the owner/vendor of that particular product/service will get an email notification on the registered email ID with <a href="http://www.byebuying.com/agreement/Rent-Agreement.pdf" target="_blank">Rent Agreement</a> attached with it and also a SMS alert on the registered mobile number.</p>
     </div>
     <div class="gap gap-small"></div>
   </div>
