--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -177,7 +177,7 @@
                 <td>Refundable security: <%= @product.refundable_security.present? ? @product.refundable_security : 'NA' %></td>
               </tr>
               <tr>
-                <td><span data-toggle="popover" data-placement="right" title="Balance security deposit after adjusting rent will be refunded at the time of return of product.">Cost of replacement ⓘ: </span><%= @product.cost_of_replacement.present? ? @product.cost_of_replacement : 'NA' %></td>
+                <td><span data-toggle="popover" data-placement="right" title="If the product is considerably damaged, lost, stolen, this is the amount the renter has to pay to the owner.">Cost of replacement ⓘ: </span><%= @product.cost_of_replacement.present? ? @product.cost_of_replacement : 'NA' %></td>
               </tr>
               <tr>
                 <td>Youtube:
