--- a/app/views/customer_mailer/product_enquiry.html.erb
+++ b/app/views/customer_mailer/product_enquiry.html.erb
@@ -79,7 +79,7 @@
 <%#= @enquiry.created_at.strftime(time_format)%>
 <!--<br>-->
 <!--Product required for duration: -->
-<%#= @enquiry.start_at.strftime(time_format)%> to <%#= @enquiry.end_at.strftime(time_format)%>
+<!--<%#= @enquiry.start_at.strftime(time_format)%> to <%#= @enquiry.end_at.strftime(time_format)%>-->
 <!--<br>-->
 <!--Price requested per hour: -->
 <%#= @enquiry.expected_per_hour_price %>
