--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -92,7 +92,7 @@
               <h5 class="product-page-side-title">Share This Item</h5>
               <% if @product.product_images.any? %>
                   <%#= social_share_button_tag("Check out " + @product.name + " on http://www.byebuying.com  ", image: @product.product_images.first.image(:original)) %>
-                  <%= social_share_button_tag(@product.name, :image => @product.product_images.first.image(:original), :'data-type' => 'photo') %>
+                  <%= social_share_button_tag(@product.name, :image => "#{@product.product_images.first.image(:original)}", :'data-type' => 'photo') %>
                   <%#= social_share_button_tag(@post.title, :url => "http://byebuying.com", :image => @product.product_images.last, desc: "The summary of page", via: "byebuying.com") %>
             <% else %>
                   <%= social_share_button_tag("Check out " + @product.name + " on http://www.byebuying.com  ", image: 'theme_img/500x500.png') %>
