--- a/app/views/enquiries/_form.html.erb
+++ b/app/views/enquiries/_form.html.erb
@@ -14,7 +14,7 @@
                 <%= simple_form_for [:product, @enquiry] do |f| %>
                     <div class="col-xs-12">
                       <div class="field-con">
-                        <%= f.input :start_at, label: 'Start Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the you require the product/service. We suggest to choose the dates for which you have fair visibility.'}, default: @product.start_at, input_html: {class: 'select-field'} %>
+                        <%= f.input :start_at, label: 'Start Time of Product ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'Select the period for which the you require the product/service. We suggest to choose the dates for which you have fair visibility.'}, default: DateTime.now, input_html: {class: 'select-field'} %>
                       </div>
                     </div>
                     <div class="col-xs-12">
@@ -58,6 +58,11 @@
                         <!--<p class="select-text"><%#= @product.price_in_rupees %></p>-->
                       <!--</div>-->
                     <!--</div>-->
+                    <div class="col-xs-12">
+                      <div class="field-con">
+                        <%= f.input :quantity, label: 'Quantity ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'In case rent is negotiable by the owner, please mention the reasonable rent you wish to pay for the product/service. Please note this will be shared with the owner and he may have the right to reject if he/she thinks rates are not reasonable.'}, input_html: {class: 'text-field', value: @product.quantity} %>
+                      </div>
+                    </div>
                     <div class="col-xs-12">
                       <div class="field-con">
                         <%= f.input :expected_per_hour_price, label: 'Expected per hour price ⓘ', label_html: {class: 'label', 'data-toggle': 'popover', 'data-placement': 'right' , title: 'In case rent is negotiable by the owner, please mention the reasonable rent you wish to pay for the product/service. Please note this will be shared with the owner and he may have the right to reject if he/she thinks rates are not reasonable.'}, input_html: {class: 'text-field', value: @product.per_hour_price}, readonly: !@product.negotiable %>
