Advertisment has been moved to header. Others will be shown to bottom of category list. Product save issue resolved.

--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -667,7 +667,7 @@ p.lead{
     }
   }
 }
-.advertisement_image{
+.header_image{
   width: 100%;
   margin: 15px 0;
 }
@@ -913,7 +913,7 @@ p.lead{
       }
     }
   }
-  .advertisement_image{
+  .header_image{
     img{
       margin: 5px 0;
     }
