--- a/app/views/customer/welcome/dashboard.html.erb
+++ b/app/views/customer/welcome/dashboard.html.erb
@@ -42,14 +42,14 @@
             eventLimit: true, // allow "more" link when too many events
 //            eventColor: 'red',
             events: [
-                <%# @advertisements.each do |advertisement| %>
+                <%# @headers.each do |header| %>
 //                {
-//                    title: "<%#= advertisement.title %>",
-//                    start: "<%#= advertisement.start_at %>",
-//                    end: "<%#= advertisement.end_at %>",
-//                    description: "<%#= advertisement.description %>",
+//                    title: "<%#= header.title %>",
+//                    start: "<%#= header.start_at %>",
+//                    end: "<%#= header.end_at %>",
+//                    description: "<%#= header.description %>",
 //                    color: "red",
-//                    url: "<%#= customer_advertisement_path(advertisement) %>"
+//                    url: "<%#= customer_header_path(header) %>"
 //                },
                 <%# end %>
                 <% @products.each do |product| %>
