--- a/app/views/welcome/about_us.html.erb
+++ b/app/views/welcome/about_us.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-4">
       <h3 class="widget-title">Our Story</h3>
-      <p>Byebuying provides anonline platform for peer to peer renting which helps you to avail a wide range of products & services on rent like Home Appliances, Home Furnishing, Furniture, Electronic items, Entertainment items, Vehicles, Gym Equipment, Dresses, Kids Fancy Dresses, Books, Commercial/Advertisement Space, Membership and many more.You can search for products/services or browse through products/servicesas per your needand also find out the vendor that rents out the product/services in your locality.</p>
+      <p>Byebuying provides anonline platform for peer to peer renting which helps you to avail a wide range of products & services on rent like Home Appliances, Home Furnishing, Furniture, Electronic items, Entertainment items, Vehicles, Gym Equipment, Dresses, Kids Fancy Dresses, Books, Commercial/Header Space, Membership and many more.You can search for products/services or browse through products/servicesas per your needand also find out the vendor that rents out the product/services in your locality.</p>
     </div>
   </div>
   <div class="gap gap-small"></div>
