--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -4,11 +4,11 @@
   <li><%= link_to 'SubCategories', admin_subcategories_path %></li>
   <li><%= link_to 'States', admin_states_path %></li>
   <li><%= link_to 'Cities', admin_cities_path %></li>
-  <li><%= link_to 'Advertisements', admin_advertisements_path %></li>
+  <li><%= link_to 'Headers', admin_headers_path %></li>
   <li><%= link_to 'Customers', admin_customers_path %></li>
   <li><%= link_to 'Products', admin_products_path %></li>
   <li><%= link_to 'Services', admin_services_path %></li>
   <li><%= link_to 'Enquiries', admin_enquiries_path %></li>
   <li><%= link_to 'Blogs', admin_blogs_path %></li>
-  <!--<li><%#= link_to 'Pending Advertisements', pending_advertisements_admin_advertisements_path %></li>-->
+  <!--<li><%#= link_to 'Pending Headers', pending_headers_admin_headers_path %></li>-->
 </ul>
