--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -163,13 +163,13 @@
           <h2 class="text-center">No Result Found</h2>
       <% end %>
 
-      <%# if @results[:advertisements].any? %>
-          <!--<h3>Advertisement:</h3>-->
-          <!--<%# @results[:advertisements].each do |advertisement| %>-->
+      <%# if @results[:headers].any? %>
+          <!--<h3>Header:</h3>-->
+          <!--<%# @results[:headers].each do |header| %>-->
               <!--<div class="search_items">-->
                 <!--<div class="col-md-2 col-sm-3 col-xs-12 text-center">-->
-                  <!--<%# if advertisement.advertisement_images.any? %>-->
-                      <!--<%#= image_tag advertisement.advertisement_images.first.image.url(AdvertisementImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>-->
+                  <!--<%# if header.header_images.any? %>-->
+                      <!--<%#= image_tag header.header_images.first.image.url(HeaderImage::DEFAULT_SIZE), class: 'img-responsive product-img-primary' %>-->
                   <!--<%# else %>-->
                       <!--<%#= image_tag 'theme_img/100x100.png', class: 'img-responsive', alt: '' %>-->
                   <!--<%# end %>-->
@@ -177,16 +177,16 @@
                 <!--<div class="col-md-10 col-sm-9 col-xs-12">-->
                   <!--<div class="row">-->
                     <!--<div class="col-sm-8 col-xs-12">-->
-                      <!--<h5 class="product-name"><%#= advertisement.title %></h5>-->
+                      <!--<h5 class="product-name"><%#= header.title %></h5>-->
                     <!--</div>-->
                     <!--<div class="col-sm-4 col-xs-12 text-right">-->
                       <!--<p class="category-name">-->
-                        <!--<a href="<%#=category_path(advertisement.subcategory.category)%>"><%#=advertisement.subcategory.category.name%></a> >-->
-                        <!--<a href="<%#=subcategory_path(advertisement.subcategory)%>"><%#=advertisement.subcategory.name%></a>-->
+                        <!--<a href="<%#=category_path(header.subcategory.category)%>"><%#=header.subcategory.category.name%></a> >-->
+                        <!--<a href="<%#=subcategory_path(header.subcategory)%>"><%#=header.subcategory.name%></a>-->
                       <!--</p>-->
                     <!--</div>-->
                     <!--<div class="col-xs-12">-->
-                      <!--<p class="description"><%#= advertisement.description %></p>-->
+                      <!--<p class="description"><%#= header.description %></p>-->
                       <!--&lt;!&ndash;<a class="read-more-link" href="#">View detail</a>&ndash;&gt;-->
                     <!--</div>-->
                   <!--</div>-->
