--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -168,7 +168,7 @@
           <button class="navbar-toggle collapsed" type="button" style="background: #395573;" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <img src="http://s3.amazonaws.com/byebuyingproduction/advertisement_images/images/000/000/038/original/logo.jpeg?1474540580" class="img-responsive" alt="">
+            <img src="http://s3.amazonaws.com/byebuyingproduction/header_images/images/000/000/038/original/logo.jpeg?1474540580" class="img-responsive" alt="">
             <!--Barter-->
           </a>
         </div>
@@ -195,7 +195,7 @@
                                   <li style="color: red">
                                    <h4><%= category.name %></h4>
                                   </li>
-                                  <% category.subcategories.each do |subcategory|%>
+                                  <% category.ordered_subcategories.each do |subcategory|%>
                                       <li>
                                         <a href="<%= subcategory_path(subcategory) %>"><%= subcategory.name %></a>
                                       </li>
@@ -242,7 +242,7 @@
                   <ul class="dropdown-menu dropdown-menu-shipping-cart">
                     <li><a href="/customer/profile">My Profile</a></li>
                     <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
-                    <!--<li><%#= link_to 'Advertisements', customer_advertisements_path %></li>-->
+                    <!--<li><%#= link_to 'Headers', customer_headers_path %></li>-->
                     <li><%= link_to 'Products', customer_products_path %></li>
                     <li><%= link_to 'Services', customer_services_path %></li>
                     <li><%= link_to 'My Enquiries', customer_enquiries_path %></li>
