--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -219,6 +219,7 @@
           <!--<div class="gap"></div>-->
           <!--Headers finish-->
       <%# end %>
+      <h3 class="widget-title">Advertisement</h3>
       <div class="row" data-gutter="15">
         <div class="header_image">
           <% @mid_headers.each_with_index do |header, index| %>
