--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -168,8 +168,8 @@
           <button class="navbar-toggle collapsed" type="button" style="background: #395573;" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <img src="http://s3.amazonaws.com/byebuyingproduction/header_images/images/000/000/038/original/logo.jpeg?1474540580" class="img-responsive" alt="">
-            <!--Barter-->
+            <%= image_tag "logo.jpeg", class: "img-responsive"%>
+                        <!--Barter-->
           </a>
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
