--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -168,7 +168,7 @@
           <button class="navbar-toggle collapsed" type="button" style="background: #395573;" data-toggle="collapse" data-target="#main-nav-collapse" area_expanded="false"><span class="sr-only">Main Menu</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/">
-            <%= image_tag "logo.jpeg", class: "img-responsive"%>
+            <%= image_tag "theme_img/logo.jpeg", class: "img-responsive"%>
                         <!--Barter-->
           </a>
         </div>
